added logic for order placing